Fixed learning module spacing issue....   ............

--- a/static/styles.css
+++ b/static/styles.css
@@ -288,6 +288,6 @@ main {
     border-radius: 15px;
 }
 
-.homebtn {
-    
+.glyphicon {
+    padding-left: 30px;
 }
